; ModuleID = '/home/carl/AnghaBench/RetroArch/ctr/extr_gpu_old.c_GPU_SetTexEnv.c'
source_filename = "/home/carl/AnghaBench/RetroArch/ctr/extr_gpu_old.c_GPU_SetTexEnv.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@GPUREG_0000 = common dso_local global i32 0, align 4
@GPU_TEVID = common dso_local global i32* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @GPU_SetTexEnv(i32 %0, i32 %1, i32 %2, i32 %3, i32 %4, i32 %5, i32 %6, i32 %7) #0 {
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  %16 = alloca i32, align 4
  %17 = alloca [5 x i32], align 16
  store i32 %0, i32* %9, align 4
  store i32 %1, i32* %10, align 4
  store i32 %2, i32* %11, align 4
  store i32 %3, i32* %12, align 4
  store i32 %4, i32* %13, align 4
  store i32 %5, i32* %14, align 4
  store i32 %6, i32* %15, align 4
  store i32 %7, i32* %16, align 4
  %18 = load i32, i32* %9, align 4
  %19 = icmp sgt i32 %18, 6
  br i1 %19, label %20, label %21

20:                                               ; preds = %8
  br label %51

21:                                               ; preds = %8
  %22 = getelementptr inbounds [5 x i32], [5 x i32]* %17, i64 0, i64 0
  %23 = call i32 @memset(i32* %22, i32 0, i32 20)
  %24 = load i32, i32* %11, align 4
  %25 = shl i32 %24, 16
  %26 = load i32, i32* %10, align 4
  %27 = or i32 %25, %26
  %28 = getelementptr inbounds [5 x i32], [5 x i32]* %17, i64 0, i64 0
  store i32 %27, i32* %28, align 16
  %29 = load i32, i32* %13, align 4
  %30 = shl i32 %29, 12
  %31 = load i32, i32* %12, align 4
  %32 = or i32 %30, %31
  %33 = getelementptr inbounds [5 x i32], [5 x i32]* %17, i64 0, i64 1
  store i32 %32, i32* %33, align 4
  %34 = load i32, i32* %15, align 4
  %35 = shl i32 %34, 16
  %36 = load i32, i32* %14, align 4
  %37 = or i32 %35, %36
  %38 = getelementptr inbounds [5 x i32], [5 x i32]* %17, i64 0, i64 2
  store i32 %37, i32* %38, align 8
  %39 = load i32, i32* %16, align 4
  %40 = getelementptr inbounds [5 x i32], [5 x i32]* %17, i64 0, i64 3
  store i32 %39, i32* %40, align 4
  %41 = getelementptr inbounds [5 x i32], [5 x i32]* %17, i64 0, i64 4
  store i32 0, i32* %41, align 16
  %42 = load i32, i32* @GPUREG_0000, align 4
  %43 = load i32*, i32** @GPU_TEVID, align 8
  %44 = load i32, i32* %9, align 4
  %45 = sext i32 %44 to i64
  %46 = getelementptr inbounds i32, i32* %43, i64 %45
  %47 = load i32, i32* %46, align 4
  %48 = or i32 %42, %47
  %49 = getelementptr inbounds [5 x i32], [5 x i32]* %17, i64 0, i64 0
  %50 = call i32 @GPUCMD_AddIncrementalWrites(i32 %48, i32* %49, i32 5)
  br label %51

51:                                               ; preds = %21, %20
  ret void
}

declare dso_local i32 @memset(i32*, i32, i32) #1

declare dso_local i32 @GPUCMD_AddIncrementalWrites(i32, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
